# zeeve-learnings

./: .gitmodules  README.md  TODO  battleship  intkey-tp  sawtooth-custom-DEV.yaml  sawtooth-default.yaml  sawtooth-notes
.github/workflows/: publish.yaml  submodules.yaml
crypto_tasks/: CMakeLists.txt  README.md
crypto_tasks/cmake/: CMakeCargo.cmake
crypto_tasks/grpc-server/: .gitignore  index.js  package.json
crypto_tasks/include/: actions.hpp
crypto_tasks/proto/: grpc.proto  payload.proto
crypto_tasks/python-lib/: main.py
crypto_tasks/rust-lib/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
crypto_tasks/rust-lib/src/: lib.rs
crypto_tasks/src/: client.cpp  server.cpp
custom_intkey/: Dockerfile  sawtooth-custom-intkey-DEV.yaml  sawtooth-custom-intkey.yaml
custom_intkey/intkey-tp/: Cargo.toml
custom_intkey/intkey-tp/src/: handler.rs
encryption_n_more/: errors_i_faced.md
encryption_n_more/src/: server.cpp
the-os-cashier/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  sawtooth-os-cashier-DEV.yaml  sawtooth-os-cashier-default.yaml  sawtooth-os-cashier-minimal.yaml
the-os-cashier/client/: .gitignore  Cargo.toml  README.md  proto  send_req
the-os-cashier/client/src/: client.rs  main.rs  payload.rs  util.rs
the-os-cashier/client/src/payload/: mod.rs
the-os-cashier/processor/: Cargo.toml
the-os-cashier/processor/proto/: payload.proto
the-os-cashier/processor/src/: handler.rs  main.rs  payload_impl.rs
the-os-cashier/processor/src/structs/: mod.rs  payload  payload.rs  state.rs
the-os-cashier/src/: main.rs
the-os-cashier/transaction-processor/: Cargo.toml  Dockerfile
the-os-cashier/transaction-processor/src/: handler.rs  main.rs
