[package]
name = "os-cashier-cli"
version = "0.1.0"
edition = "2018"
authors = ["Aditya Gupta <ag15035@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
whoami = "1.1.2"           # Retrieve the current user and environment.
dirs = "3.0.2"                    # A tiny low-level library that provides platform-specific standard locations of directories fo…
