[package]
name = "os-cashier-cli"
version = "0.1.0"
edition = "2018"
authors = ["Aditya Gupta <ag15035@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
whoami = "1.1.2"           # Retrieve the current user and environment.
dirs = "3.0.2"                    # A tiny low-level library that provides platform-specific standard locations of directories fo…
sawtooth-sdk = "0.5.0"
serde = "1.0.127"
serde_cbor = "0.11.1"
serde_derive = "1.0.127"
rand = "0.8.4"
hex = "0.4.3"
protobuf = "2.24.1"
openssl = "0.10.35"
reqwest = { version = "0.11.4", features = ["json","blocking"] }
