[package]
name = "the-os-cashier"
version = "0.1.0"
edition = "2018"
authors = ["Aditya Gupta <adityag.ug19.cs@nitp.ac.in>"]

[[bin]]
name = "os-cashier-tp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
sawtooth-sdk = "0.5.0"    # Hyperledger Sawtooth is an enterprise blockchain platform for building distributed ledger application…
rust-crypto = "0.2.36"        # A (mostly) pure-Rust implementation of various common cryptographic algorithms.
log = "0.4.14"             # A lightweight logging facade for Rust 
log4rs = "1.0.0"                     # A highly configurable multi-output logging implementation for the `log` facade
openssl = "0.10.35"
hex = "0.4.3"
serde_derive = "1.0.127"
serde = "1.0.127"
chrono = "0.4.19"
serde_cbor = "0.11.1"

