[package]
name = "the-os-cashier"
version = "0.1.0"
edition = "2018"
authors = ["Aditya Gupta <adityag.ug19.cs@nitp.ac.in>"]

[[bin]]
name = "os-cashier-tp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: @adi-g Abhi ke liye intkey ka sab dependency use kiya hu, baad me need ke hissab se karlena
[dependencies]
sawtooth-sdk
rust-crypto
clap = "3.0.0-beta.2"
log
log4rs

